# Projeto-FastApi

./: .coverage  pyproject.toml
first_fast/: cod.py  schema.py
tests/: test_cod.py
