[project]
name = "first-fast"
version = "0.1.0"
description = ""
authors = [
    {name = "Du",email = "duducostalobo10@gmail.com"}
]
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "fastapi[standard] (>=0.115.6,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"


#Taski
[tool.taskipy.tasks]
lint = 'ruff check && ruff check . --diff'
fix = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev first_fast/cod.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=first_fast -vv'
post_test = 'coverage html'



#Pytest
[tool.pytest.ini_options]
pythonpath = '.'      
addopts = '-p no:warnings'
    

#RUFF
[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'
